--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "generate-unique-id": "^2.0.3",
     "nodemon": "^3.0.1"
   }
 }
